src/app/article/article.scss
.main-cover {
  display: flex;
}

.left-sidebar-cover {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  align-items: center;
  margin-top: auto;
  margin-bottom: auto;
  width: 10%;
  position: fixed;
  height: 70%;
}

.left-sidebar {
  padding: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.left-sidebar-down {
  margin-top: 20px;
  display: none;
  justify-content: space-around;
  align-items: baseline;
}

.right-sidebar-cover {
  height: 70%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  position: fixed;
  right: 0;
  width: 10%;
  margin-bottom: 10%;
}

.right-sidebar {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.right-sidebar-down {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.side-bookmark {
  background-image: url('../../img/side-bookmark.svg');
  width: 13px;
  height: 22px;
}

.side-like {
  background-image: url('../../img/side-like.svg');
  width: 20px;
  height: 26px;
}

.side-facebook {
  background-image: url('../../img/side-fb.svg');
  width: 21px;
  height: 22px;
}

.side-twitter {
  background-image: url('../../img/side-twitter.svg');
  width: 23.5px;
  height: 23px;
}

.side-bookmark,
.side-like,
.side-facebook {
  margin-bottom: 42px;
}

.main-cover .container {
  border: none;
  border-top: none;
  border-bottom: none;
  box-sizing: border-box;
  margin-left: 10%;
  margin-right: 10%;
  width: 100%;
  max-width: none;
}

.wrapper {
  display: grid;
  grid-template-columns: 2fr 3fr;
  grid-template-rows: 1fr;
  height: auto;
  max-height: 100%;
  grid-gap: 10px;
  margin-top: 20px;
}

.description-box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 60%;
}

.article-header {
  display: flex;
  flex-direction: column;
  align-content: flex-start;
  justify-content: flex-start;
  align-items: flex-start;
  margin-top: 10px;
  padding-left: 30px;
  padding-top: 40px;
}

.article-title {
  color: #880038;
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 37px;
  text-align: left;
}

.article-description .author-heading {
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  text-align: center;
  color: #000;
}

.article-description p {
  font-size: 22px;
  text-align: left;
}

.author-description .author-heading {
  display: flex;
  flex-wrap: nowrap;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.profile-photo-container {
  width: 60px;
  height: 60px;
  align-self: center;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  background-size: cover;
  background-repeat: no-repeat;
  margin-top: -5px;
}

.author-description .default-photo {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  background: #512da8;
  font: normal;
  font-size: 35px;
  padding-top: 10px;
  color: #fff;
  text-align: center;
}

.comment-owner .default-photo {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: rgb(196, 196, 196);
  font: normal;
  font-size: 30px;
  padding-top: 6px;
  color: #fff;
  text-align: center;
  margin-top: -1px;
  margin-left: -2px;
}

.author-info {
  padding: 0;
  text-align: left;
}

.author-info,
.article-details,
.article-likes {
  margin: 5px;
}

.article-details {
  display: flex;
  margin-left: 10px;
}

.author-name {
  padding: 5px;
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 16px;
  text-align: left;
  color: rgba(0, 0, 0, 0.7);
  width: 50px;
  word-wrap: break-word;
}

.follow-button {
  border: 1px solid #03d6f5;
  padding: 3px 14px 3px 14px;
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 14px;
  text-align: center;
  color: rgba(0, 0, 0, 0.7);
  margin-left: 10px;
}

.article-date,
.article-read-time {
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 16px;
  color: rgba(0, 0, 0, 0.4);
}

.article-likes {
  display: flex;
  margin-top: -5px;
}

.total-likes {
  color: #880038;
  text-align: center;
  padding: 5px;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
}

.like-button {
  background-image: url('../../img/icon-like.svg');
  height: 20px;
  width: 20px;
  background-repeat: no-repeat;
  margin-top: 5px;
  margin-left: 6px;
}

.description-text {
  display: flex;
  flex-direction: column;
  height: auto;
}

.article-category {
  grid-column-start: 2;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 3;
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
}

.category-image {
  height: auto;
  width: auto;
  max-width: 96%;
  background-repeat: no-repeat;
  background-size: cover;
}

.article-content {
  margin-top: 30px;
}

.short-title {
  margin-bottom: -20px;
}

.article-text {
  font-family: Rosario;
  font-style: normal;
  line-height: 28px;
  font-size: 18px;
  text-align: justify;
  text-indent: 5px;
  color: #000;
  padding: 20px;
  margin-top: 20px;
}

.article-text img {
  width: auto;
  max-width: 100%;
  height: auto;
  max-height: 100%;
}

.comment-section {
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 25px;
  color: #000;
  margin-top: 16px;
  margin-left: 20px;
}

.total-comments {
  margin-right: 10px;
}

.comment-box {
  margin-top: 25px;
  margin-left: 15px;
}

.header-wrapper {
  display: flex;
}

.comment-owner {
  margin-right: -35px;
  z-index: 1;
}

.comment-container {
  flex-grow: 1;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
}

.owner-image {
  align-self: center;
  height: 50px;
  width: 50px;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  background-size: cover;
  margin-right: 3px;
}

.comment-header {
  display: flex;
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
  height: auto;
  min-height: 40px;
  background: rgba(196, 196, 196, 0.2);
}

.comment-author {
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 18px;
  text-align: center;
  color: rgba(136, 0, 56, 0.8);
  margin-left: 50px;
}

.comment-date {
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 14px;
  text-align: center;
  color: rgba(0, 0, 0, 0.5);
  margin-left: 20px;
}

.reply-button {
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 18px;
  text-align: center;
  color: #03d6f5;
  margin-left: auto;
  margin-right: 10px;
}

.comment-author,
.comment-date,
.reply-button {
  align-self: center;
}

.comment-text,
.short-title {
  padding: 10px;
  font-family: Rosario;
  font-style: normal;
  font-weight: bold;
  line-height: normal;
  font-size: 16px;
  color: #000;
  text-align: center;
}

.comment-text {
  font-weight: normal;
  text-align: start;
  margin-left: 20px;
  margin-right: 20px;
}

.add-comment-box {
  border: 1px solid rgba(0, 0, 0, 0.2);
  box-sizing: border-box;
  border-left: none;
  border-right: none;
  height: 200px;
  display: flex;
  flex-direction: column;
  margin-left: 28px;
  margin-right: 2px;
  border-bottom: none;
  margin-top: 30px;
}

.add-comment-box .comment-header {
  height: 87px;
}

.add-comment-box .comment-author {
  margin-left: 7px;
}

.pen-image {
  background-image: url('../../img/pencil.svg');
  height: 25px;
  width: 25px;
  background-repeat: no-repeat;
  z-index: 1;
  align-self: center;
  margin-left: 15px;
}

.add-comment-box button {
  margin-left: auto;
  background: #03d6f5;
  height: 68px;
  width: 100px;
  margin-top: 6px;
  margin-bottom: 10px;
  color: white;
}

textarea {
  height: 100%;
  border: 1px solid rgba(0, 0, 0, 0.2);
  border-top: none;
  font-size: 16px;
  color: #000;
  font-style: normal;
  line-height: normal;
  padding: 15px;
}

textarea::-webkit-input-placeholder {
  color: #bbb;
}

.add-comment-box input {
  flex-grow: 1;
}

.more-articles {
  font-family: Rosario;
  font-style: normal;
  line-height: normal;
  font-weight: bold;
  font-size: 20px;
  text-align: center;
  margin-bottom: 15px;
  color: #880038;
}

.sidebar-author {
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 16px;
  color: rgba(0, 0, 0, 0.6);
  text-align: center;
}

.right-sidebar-down .sidebar-author {
  font-size: 18px;
  margin-bottom: 18px;
}

.sidebar-articles {
  display: flex;
  flex-direction: column;
}

.sidebar-articles p {
  text-align: center;
  margin-top: 10px;
  font-family: Rosario;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 14px;
  text-decoration-line: underline;
}

.right-sidebar-down p {
  font-size: 16px;
}

.center-in-screen {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  justify-content: center;
}

@media screen and (max-width: 1200px) {
  .wrapper {
    grid-template-columns: 1fr;
    max-height: none;
  }

  .article-category {
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 1;
    grid-row-end: 2;
    margin-top: 20px;
  }

  .article-content {
    margin-top: 60px;
  }

  .article-header {
    margin-top: 20px;
  }

  .article-description p {
    padding-right: 10%;
  }
}

@media screen and (max-width: 950px) {
  .right-sidebar-down {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .left-sidebar-down {
    display: flex;
  }

  .left-sidebar {
    display: none;
  }

  .right-sidebar-cover {
    display: none;
  }

  .main-cover .container {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

  .header-wrapper {
    margin-left: 5px;
    margin-right: 10px;
  }

  .add-comment-box {
    margin-right: 10px;
    margin-left: 30px;
  }
}

